--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -16,29 +16,31 @@
   <meta name="keywords" content="MASSMS" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <!--  Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" th:href="@{../../images/logo/apple-touch-icon.png}">
-  <link rel="icon" type="image/png" sizes="32x32" th:href="@{../../images/logo/favicon-32x32.png}">
-  <link rel="icon" type="image/png" sizes="16x16" th:href="@{../../images/logo/favicon-16x16.png}">
-  <link rel="manifest" th:href="@{../../images/logo/site.webmanifest}">
-  <link rel="mask-icon" th:href="@{../../images/logo/safari-pinned-tab.svg}" color="#5bbad5">
+  <link rel="apple-touch-icon" sizes="180x180" th:href="@{../../../../../../images/logo/apple-touch-icon.png}">
+  <link rel="icon" type="image/png" sizes="32x32" th:href="@{../../../../../../images/logo/favicon-32x32.png}">
+  <link rel="icon" type="image/png" sizes="16x16" th:href="@{../../../../../../images/logo/favicon-16x16.png}">
+  <link rel="manifest" th:href="@{../../../../../../images/logo/site.webmanifest}">
+  <link rel="mask-icon" th:href="@{../../../../../../images/logo/safari-pinned-tab.svg}" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
-  <link rel="shortcut icon" th:href="@{../../images/logo/favicon.ico}" type="image/x-icon">
+  <link rel="shortcut icon" th:href="@{../../../../../../images/logo/favicon.ico}" type="image/x-icon">
   <!-- Owl Carousel  -->
-  <link rel="stylesheet" th:href="@{../../libs/owl.carousel/assets/owl.carousel.min.css}">
-  <!-- Prism Js -->
-  <link rel="stylesheet" th:href="@{../../libs/prismjs/themes/prism-okaidia.min.css}">
+  <link rel="stylesheet" th:href="@{../../../../../../libs/owl.carousel/assets/owl.carousel.min.css}">
+  <!-- Prism CSS -->
+  <link rel="stylesheet" th:href="@{../../../../../../libs/prismjs/themes/prism-okaidia.min.css}">
+  <!-- Select 2 CSS -->
+  <link rel="stylesheet" th:href="@{../../../../libs/select2/dist/css/select2.min.css}">
   <!--  Data Table-->
-  <link rel="stylesheet" th:href="@{../../libs/datatables.net-bs5/css/dataTables.bootstrap5.min.css}">
+  <link rel="stylesheet" th:href="@{../../../../../../libs/datatables.net-bs5/css/dataTables.bootstrap5.min.css}">
 
   <!-- Core Css -->
-  <link id="themeColors" rel="stylesheet" th:href="@{../../css/style.min.css}" />
+  <link id="themeColors" rel="stylesheet" th:href="@{../../../../../../css/style.min.css}" />
 </head>
 <body>
 
   <!-- Preloader -->
   <div th:fragment="preloader" class="preloader">
-    <img th:src="@{../../images/logo/favicon.ico}" alt="loader" class="lds-ripple img-fluid" />
+    <img th:src="@{../../../../../../images/logo/favicon.ico}" alt="loader" class="lds-ripple img-fluid" />
   </div>
 
   <!--  Side Bar-->
@@ -47,8 +49,8 @@
     <div>
       <div class="brand-logo d-flex align-items-center justify-content-between">
         <a th:href="@{/}" class="text-nowrap logo-img">
-          <img th:src="@{../../images/logo/dark-logo.svg}" class="dark-logo" width="180" alt="MASSMS" />
-          <img th:src="@{../../images/logo/light-logo.svg}" class="light-logo"  width="180" alt="MASSMS" />
+          <img th:src="@{../../../../images/logo/dark-logo.svg}" class="dark-logo" width="180" alt="MASSMS" />
+          <img th:src="@{../../../../images/logo/light-logo.svg}" class="light-logo"  width="180" alt="MASSMS" />
         </a>
         <div class="close-btn d-lg-none d-block sidebartoggler cursor-pointer" id="sidebarCollapse">
           <i class="ti ti-x fs-8 text-muted"></i>
@@ -110,7 +112,7 @@
                   <span class="d-flex">
                     <i class="ti ti-users-group"></i>
                   </span>
-              <span class="hide-menu">Mass Management</span>
+              <span class="hide-menu">User Management</span>
             </a>
             <ul aria-expanded="false" class="collapse first-level">
               <li class="sidebar-item">
@@ -157,7 +159,7 @@
   <div th:fragment="mobilenav" class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="mobilenavbar" aria-labelledby="offcanvasWithBothOptionsLabel">
     <nav class="sidebar-nav scroll-sidebar">
       <div class="offcanvas-header justify-content-between">
-        <img th:src="@{../../images/logos/favicon.ico}" alt="Favicon" class="img-fluid">
+        <img th:src="@{../../../../images/logos/favicon.ico}" alt="Favicon" class="img-fluid">
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
       <div class="offcanvas-body profile-dropdown mobile-navbar" data-simplebar="">
@@ -173,7 +175,7 @@
               <li class="sidebar-item py-2">
                 <a href="#" class="d-flex align-items-center">
                   <div class="bg-light rounded-1 me-3 p-6 d-flex align-items-center justify-content-center">
-                    <img th:src="@{../../images/svgs/icon-dd-chat.svg}" alt="Chat" class="img-fluid" width="24" height="24">
+                    <img th:src="@{../../../../images/svgs/icon-dd-chat.svg}" alt="Chat" class="img-fluid" width="24" height="24">
                   </div>
                   <div class="d-inline-block">
                     <h6 class="mb-1 bg-hover-primary">Chat Application</h6>
@@ -569,7 +571,7 @@
               <a class="nav-link pe-0" href="javascript:void(0)" id="drop1" data-bs-toggle="dropdown" aria-expanded="false">
                 <div class="d-flex align-items-center">
                   <div class="user-profile-img">
-                    <img th:src="@{../../images/profile/user-1.jpg}" class="rounded-circle" width="35" height="35" alt="User" />
+                    <img th:src="@{../../../../images/profile/user-1.jpg}" class="rounded-circle" width="35" height="35" alt="User" />
                   </div>
                 </div>
               </a>
@@ -579,7 +581,7 @@
                     <h5 class="mb-0 fs-5 fw-semibold">User Profile</h5>
                   </div>
                   <div class="d-flex align-items-center py-9 mx-7 border-bottom">
-                    <img th:src="@{../../images/profile/user-1.jpg}" class="rounded-circle" width="80" height="80" alt="User" />
+                    <img th:src="@{../../../../images/profile/user-1.jpg}" class="rounded-circle" width="80" height="80" alt="User" />
                     <div class="ms-3" sec:authorize="isAuthenticated()">
                       <h5 class="mb-1 fs-3" th:text="${session.user.firstName + ' ' + session.user.lastName}"></h5>
                       <span class="mb-1 d-block text-dark" th:each="role : ${session.user.roles}"
@@ -695,25 +697,28 @@
 
   <div th:fragment="scripts">
     <!--  Import Js Files -->
-    <script th:src="@{../../libs/jquery/dist/jquery.min.js}"></script>
-    <script th:src="@{../../libs/simplebar/dist/simplebar.min.js}"></script>
-    <script th:src="@{../../libs/bootstrap/dist/js/bootstrap.bundle.min.js}"></script>
+    <script th:src="@{../../../../libs/jquery/dist/jquery.min.js}"></script>
+    <script th:src="@{../../../../libs/simplebar/dist/simplebar.min.js}"></script>
+    <script th:src="@{../../../../libs/bootstrap/dist/js/bootstrap.bundle.min.js}"></script>
     <!--  core files -->
-    <script th:src="@{../../js/app.min.js}"></script>
-    <script th:src="@{../../js/app.init.js}"></script>
-    <script th:src="@{../../js/app-style-switcher.js}"></script>
-    <script th:src="@{../../js/sidebarmenu.js}"></script>
+    <script th:src="@{../../../../js/app.min.js}"></script>
+    <script th:src="@{../../../../js/app.init.js}"></script>
+    <script th:src="@{../../../../js/app-style-switcher.js}"></script>
+    <script th:src="@{../../../../js/sidebarmenu.js}"></script>
 
-    <script th:src="@{../../js/custom.js}"></script>
-    <script th:src="@{../../libs/prismjs/prism.js}"></script>
+    <script th:src="@{../../../../js/custom.js}"></script>
+    <script th:src="@{../../../../libs/prismjs/prism.js}"></script>
 
     <!--    Extra Js-->
-    <script th:src="@{../../libs/datatables.net/js/jquery.dataTables.min.js}"></script>
-    <script th:src="@{../../js/datatable/datatable-basic.init.js}"></script>
-    <script th:src="@{../../libs/owl.carousel/dist/owl.carousel.min.js}"></script>
-    <script th:src="@{../../libs/apexcharts/dist/apexcharts.min.js}"></script>
-    <script th:src="@{../../js/dashboard.js}"></script>
-    <script th:src="@{../../js/apps/contact.js}"></script>
+    <script th:src="@{../../../../libs/datatables.net/js/jquery.dataTables.min.js}"></script>
+    <script th:src="@{../../../../js/datatable/datatable-basic.init.js}"></script>
+    <script th:src="@{../../../../libs/owl.carousel/dist/owl.carousel.min.js}"></script>
+    <script th:src="@{../../../../libs/apexcharts/dist/apexcharts.min.js}"></script>
+    <script th:src="@{../../../../js/dashboard.js}"></script>
+    <script th:src="@{../../../../js/apps/contact.js}"></script>
+    <script th:src="@{../../../../libs/select2/dist/js/select2.full.min.js}"></script>
+    <script th:src="@{../../../../libs/select2/dist/js/select2.min.js}"></script>
+    <script th:src="@{../../../../js/forms/select2.init.js}"></script>
   </div>
 </body>
 </html>
