--- a/src/main/resources/templates/masses.html
+++ b/src/main/resources/templates/masses.html
@@ -45,10 +45,10 @@
             </div>
             <!-- Add new -->
             <div class="card card-body mt-9" sec:authorize="isAuthenticated()">
-                <div class="row">
+                <div class="row" sec:authorize="hasAnyAuthority('ADMIN', 'CREATOR', 'MANAGER')">
                     <div class="col text-end d-flex justify-content-end mt-3 mt-md-0">
-                        <a href="javascript:void(0)" id="btn-add-contact" class="btn btn-info d-flex align-items-center">
-                            <i class="ti ti-users text-white me-1 fs-5"></i> Add New Mass
+                        <a href="javascript:void(0)" id="btn-add-contact" class="btn btn-primary d-flex align-items-center">
+                            <i class="ti ti-home-plus text-white me-1 fs-5"></i> Add New Mass
                         </a>
                     </div>
                 </div>
@@ -186,7 +186,7 @@
                             <div class="row my-6">
                                 <div class="modal-footer">
                                     <button id="btn-add" type="submit" class="btn btn-primary rounded-pill px-4">Add</button>
-                                    <button type="reset" class="btn btn-danger rounded-pill px-4" aria-label="Close" data-bs-dismiss="modal"> Discard </button>
+                                    <button type="reset" class="btn btn-danger rounded-pill px-4" aria-label="Close" data-bs-dismiss="modal"><i class="ti ti-arrow-back mx-2"></i> Discard </button>
                                 </div>
                             </div>
                         </form>
