indivisual mass member page + title

--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -629,7 +629,7 @@
                           </div>
                           <div class="col-6">
                             <div class="m-n4">
-                              <img th:src="@{../../images/backgrounds/unlimited-bg.png}" alt="Sign Up" class="w-100">
+                              <img th:src="@{../../../../images/backgrounds/unlimited-bg.png}" alt="Sign Up" class="w-100">
                             </div>
                           </div>
                         </div>
