--- a/src/main/resources/templates/mass_members_2.html
+++ b/src/main/resources/templates/mass_members_2.html
@@ -21,69 +21,94 @@
                 <div class="card-body px-4 py-3">
                     <div class="row align-items-center">
                         <div class="col-9">
-                            <h4 class="fw-semibold mb-8">Add Member Into - <span th:text="${massMember.mass.name + ' Mass'}"></span></h4>
+                            <h4 class="fw-semibold mb-8 text-capitalize"><span th:text="${session.mass.name}"></span> - <span th:text="${massMemberList.size()}"></span></h4>
+                            <h4 class="fw-semibold mb-8">Mass Manager - <span th:text="${session.mass.user.firstName + ' ' + session.mass.user.lastName}"></span></h4>
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item"><a class="text-muted " th:href="@{/}">Dashboard</a></li>
                                     <li class="breadcrumb-item"><a class="text-muted " th:href="@{/mass}">All Mass</a></li>
-                                    <li class="breadcrumb-item"><a class="text-muted " th:href="@{/mass/{url}/member (url = ${massMember.mass.url})}" th:text="${massMember.mass.name + ' Mass Members'}">All Mass</a></li>
-                                    <li class="breadcrumb-item" aria-current="page">Add Member</li>
+                                    <li class="breadcrumb-item" aria-current="page" th:text="${session.mass.name + ' Mass Members'}"></li>
                                 </ol>
                             </nav>
                         </div>
                         <div class="col-3">
                             <div class="text-center mb-n5">
-                                <img th:src="@{../../../../images/breadcrumb/ChatBc.png}" alt="..." class="img-fluid mb-n4">
+                                <img th:src="@{../../../images/breadcrumb/ChatBc.png}" alt="..." class="img-fluid mb-n4">
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
             <div class="mt-3 px-4 py-3" th:if="${success}">
                 <div th:replace="fragment :: successAlertBg"></div>
             </div>
             <div class="mt-3 px-4 py-3" th:if="${error}">
                 <div th:replace="fragment :: errorAlertBg"></div>
             </div>
+            <!-- Add new -->
+            <div class="card card-body mt-9" sec:authorize="isAuthenticated()">
+                <div class="row" sec:authorize="hasAnyAuthority('ADMIN', 'CREATOR', 'MANAGER')">
+                    <div class="col text-end d-flex justify-content-end mt-3 mt-md-0">
+                        <a th:href="@{/mass/{url}/member/new (url = ${session.mass.url})}" class="btn btn-primary d-flex align-items-center">
+                            <i class="ti ti-home-plus text-white me-1 fs-5"></i> Create New Member
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="mx-lg-9 mx-md-9 mx-xl-9 mx-xxl-9">
             <section class="mx-lg-9 mx-md-9 mx-xl-9 mx-xxl-9">
                 <div class="row">
                     <div class="col-12">
                         <div class="card">
                             <div class="card-body">
-                                <form th:action="@{/mass/{url}/member/new/save (url = ${massMember.mass.url})}" th:object="${massMember}" method="post">
-                                    <div class="row">
-                                        <div class="col-md-12">
-                                            <div class="mb-3 contact-name">
-                                                <h5><label for="mass">Mass</label></h5>
-                                                <input type="text" id="mass" th:value="${massMember.mass.name}" readonly required class="form-control" />
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-md-12">
-                                            <div class="mb-3 contact-occupation">
-                                                <h5><label for="user">Select User</label></h5>
-                                                <select th:field="*{user}"
-                                                        id="user"
-                                                        class="select2 form-control"
-                                                        style="width: 100%; height: 36px"
-                                                >
-                                                    <option th:each="userEach : ${users}"
-                                                            th:value="${userEach.id}"
-                                                            th:text="${userEach.username}">
-                                                    </option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row my-6">
-                                        <div class="modal-footer">
-                                            <button type="submit" class="btn btn-primary rounded-pill px-4"><i class="ti ti-user-plus mx-2"></i> Add Member</button>
-                                            <a th:href="@{/mass}" class="btn btn-danger rounded-pill px-4"><i class="ti ti-arrow-back mx-2"></i> Discard </a>
-                                        </div>
-                                    </div>
-                                </form>
+                                <div class="table-responsive pb-5">
+                                    <table id="default_order" class="table border table-striped table-bordered display text-nowrap"
+                                           style="width: 100%">
+                                        <thead>
+                                        <tr>
+                                            <th>Sl</th>
+                                            <th>Name</th>
+                                            <th>Email</th>
+                                            <th>Mass Url</th>
+                                            <th>User Name</th>
+                                            <th>Member Status</th>
+                                            <th sec:authorize="hasAnyAuthority('ADMIN', 'EDITOR', 'MANAGER')">Actions</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr th:each="member : ${massMemberList}">
+                                                <td th:text="${member.id}">Mass Id</td>
+                                                <td th:text="${member.mass.name}">Mass Name</td>
+                                                <td th:text="${member.mass.email}">Mass Address</td>
+                                                <td th:text="${member.mass.url}">Mass Email</td>
+                                                <td th:text="${member.user.username}">Mass Email</td>
+                                                <td th:text="${member.isEnabled()} ? 'Activated' : 'Deactivated'">Mass Member Status</td>
+
+
+                                                <td sec:authorize="hasAnyAuthority('ADMIN', 'EDITOR', 'MANAGER')">
+                                                    <div class="dropdown">
+                                                        <a class="text-decoration-none" href="javascript:void(0)" id="nft2" data-bs-toggle="dropdown" aria-expanded="false">
+                                                            <i class="ti ti-dots fs-4"></i>
+                                                        </a>
+                                                        <ul class="dropdown-menu" aria-labelledby="nft2">
+                                                            <li sec:authorize="hasAnyAuthority('ADMIN', 'MANAGER')">
+                                                                <a class="dropdown-item d-flex align-items-center" sec:authorize="hasAnyAuthority('ADMIN', 'MANAGER')" th:href="@{'/mass/' + ${member.mass.url} + '/member/status/' + ${member.id}}">
+                                                                    <i class="ti ti-status-change px-2"></i> <span th:text="${member.isEnabled()} ? 'Deactivate' : 'Activate'"></span>
+                                                                </a>
+                                                            </li>
+                                                            <li sec:authorize="hasAnyAuthority('ADMIN', 'MANAGER')" th:if="${!member.isEnabled()}">
+                                                                <a class="dropdown-item d-flex text-danger align-items-center" th:href="@{'/mass/' + ${member.mass.url} + '/member/delete/' + ${member.id}}">
+                                                                    <i class="ti ti-trash px-2"></i> <span> Delete</span>
+                                                                </a>
+                                                            </li>
+                                                        </ul>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -95,7 +120,7 @@
 
 <div th:replace="fragment :: mobilenav"></div>
 
-    <!--  Search Bar -->
+<!--  Search Bar -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-dialog-scrollable modal-lg">
         <div class="modal-content rounded-1">
