Mass url update

--- a/src/main/resources/templates/edit_mass.html
+++ b/src/main/resources/templates/edit_mass.html
@@ -103,7 +103,7 @@
                                     <div class="row my-6">
                                         <div class="modal-footer">
                                             <button type="submit" class="btn btn-primary rounded-pill px-4">Save</button>
-                                            <a th:href="@{/mass}" class="btn btn-danger rounded-pill px-4"><i class="ti ti-arrow-back mx-2"></i> Discard </a>
+                                            <a th:href="@{/mass/{url} (url = ${mass.url})}" class="btn btn-danger rounded-pill px-4"><i class="ti ti-arrow-back mx-2"></i> Discard </a>
                                         </div>
                                     </div>
                                 </form>
