--- a/src/main/resources/templates/masses.html
+++ b/src/main/resources/templates/masses.html
@@ -99,12 +99,12 @@
                                                                 </a>
                                                             </li>
                                                             <li>
-                                                                <a class="dropdown-item d-flex align-items-center" th:href="@{/mass/{url}/member/new (url = ${mass.url})}">
+                                                                <a class="dropdown-item d-flex align-items-center" th:href="@{/mass/{url}/new (url = ${mass.url})}">
                                                                     <i class="ti ti-user-plus px-2"></i> <span> Add Mess Member</span>
                                                                 </a>
                                                             </li>
                                                             <li>
-                                                                <a class="dropdown-item d-flex align-items-center" th:href="@{/mass/{url}/member/ (url = ${mass.url})}">
+                                                                <a class="dropdown-item d-flex align-items-center" th:href="@{/mass/{url}/ (url = ${mass.url})}">
                                                                     <i class="ti ti-users px-2"></i> <span>Mass Members</span>
                                                                 </a>
                                                             </li>
